<resources>
    <string name="app_name">GeoNotes</string>

    <!-- Activity titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_note_list">All notes</string>
    <string name="title_activity_categories">Categories</string>

    <!-- Preference keys -->
    <string name="pref_file" translatable="false">geonotes_preferences</string>
    <string name="pref_zoom_buttons" translatable="false">PREF_ZOOM_BUTTONS</string>
    <string name="pref_map_scaling" translatable="false">PREF_MAP_SCALING</string>
    <string name="pref_snap_note_gps" translatable="false">PREF_SNAP_NOTE_GPS</string>
    <string name="pref_enable_rotating_map" translatable="false">PREF_ENABLE_ROTATING_MAP</string>
    <string name="pref_map_rotation" translatable="false">PREF_MAP_ROTATION</string>
    <string name="pref_last_location_lat" translatable="false">PREF_LAST_LOCATION_LAT</string>
    <string name="pref_last_location_lon" translatable="false">PREF_LAST_LOCATION_LON</string>
    <string name="pref_last_location_zoom" translatable="false">PREF_LAST_LOCATION_ZOOM</string>
    <string name="pref_tap_duration" translatable="false">PREF_TAP_DURATION</string>
    <string name="pref_keep_camera_open" translatable="false">PREF_KEEP_CAMERA_OPEN</string>
    <string name="pref_last_category_id" translatable="false">PREF_LAST_CATEGORY_ID</string>

    <!-- Misc strings -->
    <string name="feedback_mail_domain" translatable="false">hauke-stieler.de</string>
    <string name="feedback_mail_local_part" translatable="false">geonotes</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="osm_contribution">© <a href="https://openstreetmap.org/copyright">OpenStreetMap</a> contributors</string>

    <!-- Dialog buttons -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <!-- Toolbar -->
    <string name="toolbar_gps_follow_mode">GPS follow mode</string>
    <string name="toolbar_export">Export</string>
    <string name="toolbar_import">Import</string>
    <string name="toolbar_list_of_notes">List of notes</string>
    <string name="toolbar_categories">Categories</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_remove_all_notes">Remove all notes</string>
    <string name="toolbar_open_filter_dialog">Open Filter dialog</string>

    <!-- Settings -->
    <string name="show_zoom_buttons">Show zoom-buttons</string>
    <string name="map_scaling_factor">Map scaling factor</string>
    <string name="snap_note_to_gps_location">Snap note to GPS location</string>
    <string name="enable_rotating_the_map">Enable rotating the map</string>
    <string name="background_map_cache">Background map cache</string>
    <string name="clear">Clear</string>
    <string name="tap_long_to_create_a_note">Tap long to create a note</string>
    <string name="keep_camera_open">Keep camera open after taking a picture</string>
    <string name="feedback">Feedback</string>
    <string name="geonotes_version">GeoNotes version</string>
    <string name="no_mail_client_found">No mail client found</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="cache_cleared_error">Error clearing cache!</string>

    <!-- Marker -->
    <string name="marker_instructions">1. Move the map\n2. Release your finger to save location</string>
    <string name="enter_text_for_a_new_note">Enter text for a new note:</string>
    <string name="marker_move">Move</string>
    <string name="marker_delete">Delete</string>

    <!-- Exporter -->
    <string name="gpx_export_failed">Exporting GPX file failed</string>

    <!-- Note List -->
    <string name="note_list_delete_all_notes">Really delete ALL notes? This is not reversible!</string>
    <string name="note_list_delete_all_filtered_notes">Really delete FILTERED notes? This is not reversible!</string>
    <string name="note_list_create_thumbnail_failed">Creating thumbnail failed</string>
    <string name="note_list_only_photo">"(only photo)"</string>

    <!-- Filter dialog-->
    <string name="filter_dialog_filter_by_note_text">Filter by note text:</string>
    <string name="filter_dialog_filter_by_category">Filter by category:</string>

    <!-- Category list -->
    <string name="category_list_save">Save</string>
    <string name="category_list_color_notice">Changing color isn\'t possible yet but will come in the future.</string>
    <string name="category_cannot_delete_with_notes">There are notes with this category, you can\'t delete it.</string>
    <string name="category_new">+ New</string>

    <!-- Initial color names -->
    <string name="initial_color_red">Red</string>
    <string name="initial_color_pink">Pink</string>
    <string name="initial_color_purple">Purple</string>
    <string name="initial_color_blue">Blue</string>
    <string name="initial_color_light_blue">Light blue</string>
    <string name="initial_color_teal">Teal</string>
    <string name="initial_color_green">Green</string>
    <string name="initial_color_yellow">Yellow</string>
    <string name="initial_color_orange">Orange</string>
    <string name="initial_color_brown">Brown</string>
    <string name="initial_color_grey">Grey</string>

    <!-- Backup import dialog -->
    <string name="backup_import_title">Import Backup</string>
    <string name="backup_import_file_chooser_title">1. Select a backup ".zip" or ".geojson" file</string>
    <string name="backup_import_file_chooser">Select file</string>
    <string name="backup_import_overwrite_append">2. Choose whether to append the backup to the current app or to overwrite everything. If settings are imported, they are overwritten regardless of this selection.</string>
    <string name="backup_import_append">Overwrite</string>
    <string name="backup_import_overwrite">Append</string>
    <string name="backup_import_what_to_import">3. Choose what parts of the backup to import</string>
    <string name="backup_import_notes">Notes</string>
    <string name="backup_import_photos">Photos</string>
    <string name="backup_import_categories">Categories</string>
    <string name="backup_import_settings">Settings</string>
    <string name="backup_import_overwrite_warning">CAUTION: You chose to overwrite the current data!\n\nBefore you continue: Make sure you created a backup of the current app.\n\nAll(!) data (notes, categories, photos) of this app will be removed during import! This cannot be undone!</string>
    <string name="backup_import_start">Import</string>
    <string name="backup_import_loading">Importing backup …</string>
    <string name="backup_import_done_label">Done ✓</string>
    <string name="backup_import_close_button">Close</string>
    <string name="backup_import_error_label">Aborted import due to error.</string>
</resources>