<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_drag_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/marker_instructions" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_note_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/enter_text_for_a_new_note" />

        <EditText
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:gravity="top"
            android:inputType="text|textMultiLine" />

        <LinearLayout
            android:id="@+id/button_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creation_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="5pt" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="left">

                <ImageButton
                    android:id="@+id/camera_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_marginLeft="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_add_a_photo"
                    android:tint="@color/primary" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <LinearLayout
                        android:id="@+id/note_image_panel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/move_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_move"
                    android:text="@string/marker_move" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_delete"
                    android:text="@string/marker_delete" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_save"
                    android:text="OK" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>